# artemis

./: .gitignore  AGENTS.md  CODEX_IMPLEMENTATION_BRIEF.md  MANIFEST.yaml  Makefile  NEXT_AGENT_START_HERE.md  README.md  artemis.yaml  llms.txt  opencode.jsonc  pjm_workbench_mvp_agent_spec.md  pjm_workbench_mvp_backlog.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
adapters/: README.md
agents/: development_improvement_agent.md  fundamentals_analyst.md  orchestrator.md  portfolio_pricing_analyst.md  qa_reconciliation_analyst.md  valuation_bridge_analyst.md
config/: litellm_config.example.yaml
configs/: cache_policy.yaml  forecast_retention_policy.yaml  risk_policy.yaml  source_policy.yaml
development/: ABSTRACTION_RULES.md  CHANGE_POLICY.md  COMPATIBILITY_POLICY.md  ERROR_TAXONOMY.md  IMPROVEMENT_LOOP.md  PROMOTION_CHECKLIST.md
docs/: AGENT_MODES.md  AGENT_WRAPPER_EVALUATION.md  ARCHITECTURE.md  CODEX_WORKFLOW.md  CONVENTIONS_LOCKED_v0.1.md  LOCAL_LLM.md  OFFICIAL_SOURCE_REGISTER.md  OPENCODE_SETUP.md  README.md  RELEASE_PROCESS.md  ROADMAP.md  VCS_POLICY.md  WORK_MANAGEMENT.md  WRAPPER_ABSTRACTION_POLICY.md
domain/: atc_conventions.md  forward_fundamental_mapping.md  gas_index_families.md  gas_locations.md  market_index_model.md  period_grammar.md  pjm_fundamentals.md  power_basis_conventions.md  power_generation_mix.md  power_locations.md  power_market_calendars.md  power_price_shape_rules.md  power_system_artifact_products.md  power_system_ingestion.md  power_system_operational_events.md  power_system_operators.md  power_system_preflight.md  (+11 more)
(+968 files in other folders)
