[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pga-workbench"
version = "0.1.0"
description = "Model-agnostic Power + Gas Analytics Workbench scaffold"
requires-python = ">=3.10"
dependencies = ["jsonschema>=4.0", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
pga = "pga_workbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
